# serverless-payments-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
infrastructure/: api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  stripe.tf  vars.tf
scripts/: build.py
src/: environment.rs  finish_payment.rs  initiate_payment.rs  lib.rs  payment.rs  payment_client.rs  payments_repository.rs  request_utils.rs
src/database/: client.rs  mod.rs  payments_repository.rs
src/domain/: mod.rs  payment.rs  payment_request.rs
