[package]
name = "serverless-payments-rs"
version = "0.1.0"
edition = "2021"


[lib]
name = "serverless_payments"
path = "src/lib.rs"

[[bin]]
name = "initiate_payment"
path = "src/initiate_payment.rs"

[[bin]]
name = "finish_payment"
path = "src/finish_payment.rs"


[dependencies]
lambda_http = "0.8.1"
tokio = { version = "1", features = ["full"]}