[package]
name = "serverless-payments-rs"
version = "0.1.0"
edition = "2021"


[lib]
name = "serverless_payments"
path = "src/lib.rs"

[[bin]]
name = "initiate_payment"
path = "src/initiate_payment.rs"

[[bin]]
name = "finish_payment"
path = "src/finish_payment.rs"


[dependencies]
lambda_http = "0.8.1"
tokio = { version = "1", features = ["macros", "sync", "parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stripe = { version = "0.22", features = ["runtime-tokio-hyper"] }
aws-sdk-dynamodb = "0.29.0"
aws-config = "0.56.0"
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.1", features = ["v4"] }
